fix: css alignment

--- a/Grandma_Lemon/css/style.css
+++ b/Grandma_Lemon/css/style.css
@@ -47,7 +47,7 @@ span.tooltip:hover{
 	cursor: pointer;
 }
 span.tooltip:after{
-	content: attr(tip);
+	content: attr(title);
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:90%;
 	line-height:1.2em;
